# BOUT-dev

./: .build_adios2_for_ci.sh  .build_petsc_for_ci.sh  .build_sundials_for_ci.sh  .build_sundials_for_travis.sh  .ci_fedora.sh  .ci_script.sh  .ci_with_cmake.sh  .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .codacy.yml  .codacy_coverage.sh  .codecov.yml  .findallcxx.sh  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgtags  .install_miniconda_for_travis.sh  .pip_install_for_ci.sh  .pip_install_for_travis.sh  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .travis_fedora.sh  .travis_script.sh  ABOUT  CHANGELOG.md  CITATION  CITATION.bib  CITATION.cff  CMakeLists.txt  CMakeLists.txt.orig-merge  CMakeLists_backup.txt  CONTRIBUTING.md  Changelog.md  (+36 more)
bout++/: .gitignore  configure  configure.ac  make.config.in  makefile  makefile.README  use_bout.sh.in
bout++/PVODE/: README
bout++/examples/: .gitignore  makefile  petscopt
bout++/include/: BoutIfc.h  boundary_factory.h  boundary_op.h  boundary_region.h  boundary_standard.h  bout.h  bout_types.h  boutexception.h  boutmesh.h  datafile.h  derivs.h  difops.h  emptysolver.h  field2d.h  field3d.h  field_data.h  globals.h  gyro_average.h  initialprofiles.h  invert_laplace.h  inverter.h  mesh.h  options.h  quiltmesh.h  solver.h  utils.h  vecops.h  vector3d.h
bout++/manual/: Makefile  developer_manual.tex  preconditioning.tex  reference.tex  references.bib  user_manual.tex
bout++/src/: BoutIfc.cpp  bout++.cpp  bout.h  makefile
examples/: .gitignore  CMakeLists.txt  README.md  README.rst  common.hxx  makefile  petscopt  test_suit_make  test_suite  test_suite_list  test_suite_make
examples/2Dturbulence_multigrid/: .gitignore  CMakeLists.txt  README.md  esel  esel.cxx  makefile  redistribute_restarts.py
examples/6f_landau/: 6f_landau.cxx  CMakeLists.txt
examples/6field-simple/: .gitignore  CMakeLists.txt  README.md  bout_hopper_debug.cmd  cbm18_dens8.grid_nx68ny64.nc  collect-all.pro  elm_6f.cxx  makefile  plot-mode.pro  plot-mode2.pro
examples/BoundaryOp_timing/: BoundaryOp_timing.cxx  makefile  run.sh
examples/IMEX/: README.md
examples/ImEx/: imex.cxx  makefile
examples/LTOH/: .elm_pb.cxx.swp  Elm_n15_pb_lineargrowthrate_diam_S8hyperRm4.ps  README  bout_franklin_debug.cmd  bout_hopper_debug.pbs  runcase.sh  runidl.pro
examples/MMS/: makefile
examples/advdiff/: CMakeLists.txt  README  advdiff.cxx  generate_grid.pro  idlsave.pro  makefile  runidl.pro  set_bout_top.sh  slab.grd.nc
examples/advdiff2/: .gitignore  CMakeLists.txt  README  advdiff.cxx  globals.cxx  globals.hxx  header.hxx  init.cxx  makefile  rhs.cxx  run.cxx  set_bout_top.sh
examples/advect1d/: gas_compress.cxx  runcase.sh
examples/advect1d-newapi/: gas_compress.cxx  gas_compress.hxx  makefile
examples/backtrace/: CMakeLists.txt  README.md  backtrace.cxx  makefile
examples/blob2d/: .gitignore  CMakeLists.txt  README  README.md  blob2d.cxx  blob_velocity.py  data
examples/blob2d-laplacexz/: CMakeLists.txt  README.md  blob2d.cxx  makefile
examples/blob2d-outerloop/: CMakeLists.txt  blob2d.cxx  blob2d_bakcup_cpu_version.cxx  makefile
examples/blob2d-time-subsampling/: README  blob2d.cxx  test_subsampling.py
examples/bout_runners_example/: .gitignore  1-basic_driver.py  10-restart_with_resize.py  11-restart_with_scan.py  12-PBS_restart_with_waiting.py  13-restart_w_add_noise.py  2-override_BOUTinp.py  2-run_with_simple_post_processing.py  3-override_BOUTinp.py  3D_diffusion.cxx  4-run_with_combinations.py  5-run_with_grid_files.py  6-PBS_run.py  6a-run_with_MMS_post_processing_specify_numbers.py  6b-run_with_MMS_post_processing_grid_file.py  7-PBS_run.py  7-basic_PBS_run.py  8-PBS_run_extra_option.py  9-PBS_with_MMS_post_processing_grid_file.py  README.md  diffusion_3D.cxx  driver.py  driver_w_grid_file.py  generate.py  grid_generator.py  makefile  post_processing_MMS.py  post_processing_show_the_data.py
examples/boutcore/: blob2d.py  blob2d_legacy.py  runexample  simulation.py
examples/boutpp/: CMakeLists.txt  blob2d.py  blob2d_legacy.py  simulation.py
examples/conducting-wall-mode/: .gitignore  CMakeLists.txt  README.md  cwm.cxx  cwm_grid.nc  makefile
examples/conduction/: .gitignore  CMakeLists.txt  README.md  conduct_grid.nc  conduction.cxx  generate.py  makefile  run  runtest
examples/conduction-newapi/: conduction.cxx  makefile
examples/conduction-snb/: .gitignore  CMakeLists.txt  README.md  conduction-snb.cxx  fit_temperature.py  makefile  sinusoid.py  snb.csv  spitzer-harm.csv  step.py  temperature.csv  vfp.csv
examples/constraints/: README.md  drift-wave-constraint
examples/cython/: .gitignore  Makefile  boutcore.pyx.in  boutcpp.pxd  field3d.pyx  helper.cxx  helper.cxx.in  helper.h  helper.h.in  other_enums.hxx  resolve_enum.pxd.in  runtest  setup.py  setup.py.in
examples/d3d-119919/: 2fluid.cxx
examples/d3d-129131/: 2fluid.cxx
examples/dalf3/: .gitignore  CMakeLists.txt  README.md  dalf3.cxx  dalf3_hotion.cxx  makefile
examples/drift-instability/: 2fluid.cxx  BOUT.inp  runtest
examples/eigen-box/: .gitignore  CMakeLists.txt  README.md  eigen-box.cxx  eigenvals.py  makefile
examples/elm-6f/: CMakeLists.txt  elm_6f_v0.cxx  job_script.sh
examples/elm-pb/: .gitignore  CMakeLists.txt  Elm_runs_atlas.cmd  README  README.md  bout_franklin_6hrs.cmd  bout_hopper_debug_PE16.pbs  bout_hopper_wkshop_PE16.pbs  check_Ucheck.py  check_Ucheck_anim-z.py  check_maxerr.py  check_metrics.py  elm_pb.cxx  elm_pb.cxx.cpu  elm_pb.cxx.gpu  makefile  plot_linear.py  qsubcase.sh  run_example.sh  runcase.sh  runexample  runexample.py  runtest
examples/elm-pb-mri/: CMakeLists.txt  elm_pb_mri.cxx
examples/elm-pb-outerloop/: CMakeLists.txt  README.md  cbm18_8_y064_x516_090309.nc  elm_pb_outerloop.cxx  makefile
examples/em-drift/: 2fluid.cxx  CMakeLists.txt  make_d.pro  makefile  runcase.sh  runidl.pro
examples/fci-slab/: fci.py  fci_slab.cxx  generate.py  mms.py  plot_funcs.py  plot_interp.py  runtest  (+1 more)
pdb2idl/: configure  configure.ac  make.config.in
(+4178 files in other folders)
